# py_ralph_frame

./: .gitignore  AGENTS.md  PROMPT.md  README.md  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  publish.yml
docs/: PROJECT_STATUS.md  interfaces.md  plan.md  research.md
harness/: __init__.py  cli.py  gate.py  gitio.py  preferences.py  ralph.sh
specs/: base.md  harness.md
tests/: test_specs.py
tests/harness/: conftest.py  test_cli.py  test_gate.py  test_integration.py  test_ralph.py  test_structure.py
